# Axas.2839072023.hackatone

./: .env  .gitignore  docker-compose.yml  support.axas.ru
backend/app/: pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 224ef692d5ec_otp.py  3db219f56ca7_fix_iniatial_struct.py  5bc518c7b33b_ip_address.py  8db36ad8d0f2_auth_session.py  a9724f45771b_end_session.py  e8b5e5ed20a3_user_last_activity.py  f308242f8af2_tel_field.py
backend/app/app/: api.py  backend_pre_start.py  config.py  deps.py  errors.py  exceptions.py  initial_data.py  main.py
backend/app/app/crud/: __init__.py  base.py  crud_email_verification_code.py  crud_highschool.py  crud_highschool_request.py  crud_user.py  media.py
backend/app/app/endpoints/: email_verification_code.py  highschool.py  highschool_request.py  login.py  users.py
backend/app/app/getters/: __init__.py  email_verification_code.py  highschool.py  highschool_request.py  universal.py  user.py
backend/app/app/models/: __init__.py  email_verification_code.py  highschool.py  highschool_request.py  user.py
backend/app/app/schemas/: __init__.py  email_verification_code.py  highschool.py  highschool_request.py  response.py  token.py  user.py
backend/app/app/services/email_sender/: __init__.py  base_sender.py  fake_sender.py  smtp_sender.py  telegram_sender.py
backend/app/app/services/payment/: base_payment.py  fake_payment.py  sber_payment.py
backend/app/app/utils/: code.py  datetime.py  descriptable.py  logging.py  pagination.py  response.py  ru_unit.py  security.py  unique_join.py
(+12 files in other folders)
